xml-web-services/3.0/_index.md
---
title: "Jakarta XML Web Services 3.0"
date: 2020-09-05
summary: "Release for Jakarta EE 9"
---
Jakarta XML Web Services defines a means for implementing XML-Based Web Services
based on Jakarta SOAP with Attachments and Jakarta Web Services Metadata.

* [Jakarta XML Web Services 3.0 Release Record](https://projects.eclipse.org/projects/ee4j.jaxws/releases/3.0-jakarta-xml-web-services)
  * [Jakarta EE Platform 9 Release Plan](https://eclipse-ee4j.github.io/jakartaee-platform/jakartaee9/JakartaEE9ReleasePlan)
* [Jakarta XML Web Services 3.0 Specification Document](./jakarta-xml-ws-spec-3.0.pdf) (PDF)
* [Jakarta XML Web Services 3.0 Specification Document](./jakarta-xml-ws-spec-3.0.html) (HTML)
* [Jakarta XML Web Services 3.0 Javadoc](./apidocs)
* [Jakarta XML Web Services 3.0 XML Schema](https://jakarta.ee/xml/ns/jaxws/wsdl_customizationschema_3_0.xsd)
* [Jakarta XML Web Services 3.0 TCK](https://download.eclipse.org/jakartaee/xml-web-services/3.0/jakarta-xml-ws-tck-3.0.0.zip)  ([sig](https://download.eclipse.org/jakartaee/xml-web-services/3.0/jakarta-xml-ws-tck-3.0.0.zip.sig),  [sha](https://download.eclipse.org/jakartaee/xml-web-services/3.0/jakarta-xml-ws-tck-3.0.0.zip.sha256),  [pub](https://raw.githubusercontent.com/jakartaee/specification-committee/master/jakartaee-spec-committee.pub))
   * Adds JDK 11 Support [Jakarta XML Web Services 3.0.1 TCK](https://download.eclipse.org/jakartaee/xml-web-services/3.0/jakarta-xml-ws-tck-3.0.1.zip) ([sig](https://download.eclipse.org/jakartaee/xml-web-services/3.0/jakarta-xml-ws-tck-3.0.1.zip.sig), [sha](https://download.eclipse.org/jakartaee/xml-web-services/3.0/jakarta-xml-ws-tck-3.0.1.zip.sha256), [pub](https://raw.githubusercontent.com/jakartaee/specification-committee/master/jakartaee-spec-committee.pub))
* Maven coordinates
  * [jakarta.xml.ws:jakarta.xml.ws-api:jar:3.0.1](https://search.maven.org/artifact/jakarta.xml.ws/jakarta.xml.ws-api/3.0.1/jar)
* [Change Log](./changelog)


# Compatible Implementations

* [Eclipse Implementation of XML Web Services 3.0.0](https://eclipse-ee4j.github.io/metro-jax-ws/)
* [Eclipse Metro 3.0.0](https://eclipse-ee4j.github.io/metro-wsit/)
* [Eclipse Metro 3.0.1](https://eclipse-ee4j.github.io/metro-wsit/)

# Ballots

## Plan Review

[//]: # (For Jakarta EE 9, the Platform Plan Review covered 95% of the Specification Projects.  For those Projects, just use the following statement in this Plan Review section:)

This Specification Project's Plan Review was covered by the [Jakarta EE 9 Plan Review](https://jakarta.ee/specifications/platform/9/).  
Please reference that ballot for the official results.

[//]: # (If your Project was required to do a standalone Plan Review...  You'll need to perform an official Plan Review ballot and record the results here.)

## Release Review

The Specification Committee Ballot concluded successfully on 2020-10-20 with the following results.

| Representative                                      | Representative for: | Vote |
|-----------------------------------------------------|---------------------|------|
| Kenji Kazumura                                      | Fujitsu             |  +1  |
| Dan Bandera, Kevin Sutter                           | IBM                 |  +1  |
| Ed Bratt, Dmitry Kornilov                           | Oracle              |  +1  |
| Andrew Pielage, Matt Gill                           | Payara              |  +1  |
| Scott Stark, Mark Little                            | Red Hat             |  +1  |
| David Blevins, Jean-Louis Monteiro                  | Tomitribe           |  +1  |
| Ivar Grimstad                                       | EE4J PMC            |  +1  |
| Marcelo Ancelmo, Martijn Verburg                    | Participant Members |  +1  |
| Werner Keil                                         | Committer Members   |  +1  |
| Scott (Congquan) Wang                               | Enterprise Members  |  +1  |
|                                                     | Total               |  10  |


The ballot was run in the [jakarta.ee-spec mailing list](https://www.eclipse.org/lists/jakarta.ee-spec/msg00961.html)
